Change layout wrapping. Fix last seen

--- a/src/www/css/app.css
+++ b/src/www/css/app.css
@@ -548,6 +548,12 @@ video {
   width: 100%;
 }
 
+@media (min-width: 450px) {
+  .container {
+    max-width: 450px;
+  }
+}
+
 @media (min-width: 576px) {
   .container {
     max-width: 576px;
@@ -710,10 +716,6 @@ video {
   margin-right: 0.5rem;
 }
 
-.mr-4 {
-  margin-right: 1rem;
-}
-
 .mt-0 {
   margin-top: 0px;
 }
@@ -862,8 +864,8 @@ video {
   width: 100%;
 }
 
-.min-w-24 {
-  min-width: 6rem;
+.min-w-20 {
+  min-width: 5rem;
 }
 
 .max-w-3xl {
@@ -875,6 +877,10 @@ video {
 }
 
 .flex-shrink-0 {
+  flex-shrink: 0;
+}
+
+.shrink-0 {
   flex-shrink: 0;
 }
 
@@ -1149,10 +1155,6 @@ video {
 
 .pb-12 {
   padding-bottom: 3rem;
-}
-
-.pb-2 {
-  padding-bottom: 0.5rem;
 }
 
 .pb-20 {
@@ -1459,8 +1461,12 @@ video {
   opacity: 1;
 }
 
-@media (min-width: 576px) {
-  .xs\:flex-row {
+@media (min-width: 450px) {
+  .xxs\:ml-0 {
+    margin-left: 0px;
+  }
+
+  .xxs\:flex-row {
     flex-direction: row;
   }
 }
@@ -1532,16 +1538,8 @@ video {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
-  .sm\:flex-row {
-    flex-direction: row;
-  }
-
   .sm\:flex-row-reverse {
     flex-direction: row-reverse;
-  }
-
-  .sm\:flex-nowrap {
-    flex-wrap: nowrap;
   }
 
   .sm\:items-start {
@@ -1580,16 +1578,20 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:ml-0 {
-    margin-left: 0px;
-  }
-
   .md\:inline-block {
     display: inline-block;
   }
 
+  .md\:min-w-24 {
+    min-width: 6rem;
+  }
+
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:gap-4 {
+    gap: 1rem;
   }
 
   .md\:px-0 {
@@ -1599,6 +1601,11 @@ video {
 
   .md\:pb-0 {
     padding-bottom: 0px;
+  }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 }
 
